// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute convert api should return success 1`] = `
Object {
  "data": Object {
    "result": 1785.0181286441143,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1785.0181286441143,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with batched quote symbols 1`] = `
Object {
  "data": Object {
    "base": "BTC",
    "date": "2022-01-12",
    "rates": Object {
      "USD": 42968.36778447169,
      "XAU": 0.04228229144046888,
    },
    "results": Array [
      Array [
        "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "USD",
          },
          "debug": Object {
            "batchCacheKey": "2E1RbkLbQOXUVtGI1E2+n/etEO8=",
            "batchChildrenCacheKeys": Array [
              Array [
                "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
                Object {
                  "data": Object {
                    "base": "BTC",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "Io9CE5GgK3Zu72UltbQi09+PByY=",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        42968.36778447169,
      ],
      Array [
        "jn7Ay27+0XZwS3+kIquAQibbEtg=",
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "XAU",
          },
          "debug": Object {
            "batchCacheKey": "2E1RbkLbQOXUVtGI1E2+n/etEO8=",
            "batchChildrenCacheKeys": Array [
              Array [
                "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
                Object {
                  "data": Object {
                    "base": "BTC",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "Io9CE5GgK3Zu72UltbQi09+PByY=",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        0.04228229144046888,
      ],
    ],
    "success": true,
    "timestamp": 1641990180,
    "unit": "per ounce",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with single base/quote pair 1`] = `
Object {
  "data": Object {
    "result": 1817.0552439305814,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1817.0552439305814,
  "statusCode": 200,
}
`;

exports[`execute latest api should succeed with batched base symbols (inverted quote) 1`] = `
Object {
  "data": Object {
    "base": "USD",
    "date": "2022-01-12",
    "rates": Object {
      "GBP": 42968.36778447169,
      "XAU": 0.04228229144046888,
    },
    "results": Array [
      Array [
        "4LsxrIT483BCS93HKnZ32ylFSOU=",
        Object {
          "data": Object {
            "base": "XAU",
            "endpoint": "latest",
            "quote": "USD",
          },
          "debug": Object {
            "batchCacheKey": "aQyZBD4Svg72cpXfGQUCGpzUNQI=",
            "batchChildrenCacheKeys": Array [
              Array [
                "4LsxrIT483BCS93HKnZ32ylFSOU=",
                Object {
                  "data": Object {
                    "base": "XAU",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "WsOvkm0wEBg6k+OFH4f0i465GGQ=",
          },
          "id": "1",
          "rateLimitMaxAge": 235294117,
        },
        23.65056305919334,
      ],
      Array [
        "s4Eob4V/uG3W8FVSucnYEe/iTP4=",
        Object {
          "data": Object {
            "base": "GBP",
            "endpoint": "latest",
            "quote": "USD",
          },
          "debug": Object {
            "batchCacheKey": "aQyZBD4Svg72cpXfGQUCGpzUNQI=",
            "batchChildrenCacheKeys": Array [
              Array [
                "4LsxrIT483BCS93HKnZ32ylFSOU=",
                Object {
                  "data": Object {
                    "base": "XAU",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "WsOvkm0wEBg6k+OFH4f0i465GGQ=",
          },
          "id": "1",
          "rateLimitMaxAge": 235294117,
        },
        0.00002327293429008,
      ],
    ],
    "success": true,
    "timestamp": 1641990180,
    "unit": "per ounce",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;
